<resources>
    <string name="app_name">CookingGuide</string>
    <string name="recipe_list_app_bar_title">Baking Time</string>
    <string name="recipe_details_ingredients_title">Ingredients</string>
    <string name="recipe_details_steps_title">Steps</string>
    <string name="recipe_step_title">Instructions</string>

    <string name="recipe_step_previous">&lt;</string>
    <string name="recipe_step_next">&gt;</string>
    <string name="recipe_step_no_video">This step has no video</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipe_list_error_message">Could now load the recipes. Please try again later.</string>
</resources>
