<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recipe_list_fragment_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/recipe_fragment_top_margin"
        android:layout_marginBottom="@dimen/recipe_fragment_top_margin">

    <ProgressBar
            android:id="@+id/recipe_list_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recipe_list_loading_top_margin"
            android:layout_gravity="center"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/recipe_list_error_message"
            android:paddingTop="12dp"
            android:textSize="18sp"
            android:fontFamily="Roboto-Condensed"
            android:textAlignment="center"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_list_error_message"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_recycler_view"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
