<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.rokas.cookingguide.RecipeListActivity">

    <FrameLayout
            android:id="@+id/recipe_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>
